# snappea

./: Cargo.toml  README.md  build.rs  i18n.toml  justfile
.github/workflows/: release.yml
data/: blazingshot.portal  io.github.hojjatabdollahi.snappea.desktop  io.github.hojjatabdollahi.snappea.service  org.freedesktop.impl.portal.blazingshot.service  snappea.portal
fonts/: icons.toml
i18n/cs/: snappea.ftl
i18n/en/: blazingshot.ftl  snappea.ftl
i18n/sv/: snappea.ftl
src/: app.rs  arrow.rs  buffer.rs  config.rs  localize.rs  main.rs  ocr.rs  qr.rs  screenshot.rs  tray.rs
src/annotations/: handlers.rs  mod.rs
src/capture/: image.rs  mod.rs  ocr.rs  qr.rs
src/core/: app.rs  control.rs  mod.rs  portal.rs
src/domain/: annotation.rs  geometry.rs  mod.rs  selection.rs
src/render/: geometry.rs  image.rs  mesh.rs  mod.rs
src/screencast/: dmabuf.rs  encoder.rs  mod.rs  pipeline.rs  recorder.rs  state.rs
src/screenshot/: mod.rs  portal.rs
src/screenshot/handlers/: mod.rs  selection.rs
src/session/: messages.rs  mod.rs  shortcuts.rs  state.rs
src/wayland/: mod.rs
src/widget/: annotation_canvas.rs  drawing.rs  icon_toggle.rs  keyboard_wrapper.rs  lucide.rs  magnifier.rs  mod.rs  output_selection.rs  rectangle_selection.rs  screenshot.rs  settings_drawer.rs  settings_handlers.rs  tool_button.rs  tool_handlers.rs  toolbar.rs  toolbar_position_selector.rs  video_scrubber.rs
src/widget/overlays/: magnifier_overlays.rs  mod.rs  redact_overlays.rs  shapes_overlay.rs  status_overlays.rs
src/widget/screenshot_selection/: events.rs  helpers.rs  mod.rs  widget.rs
