[package]
name = "snappea"
version = "0.6.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Screenshot and screen recording for COSMIC desktop"

[features]
default = ["wgpu"]
wgpu = ["cosmic/wgpu"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", branch = "main" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", branch = "main" }
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3"
image = "0.25"
tiny-skia = "0.12"
libc = "0.2"
log = "0.4.28"
memmap2 = "0.9.8"
# OCR backends
rusty-tesseract = "1.1.10"
png = "0.18"
rfd = "0.17"
rqrr = "0.10"
rustix = { version = "1.1", features = ["fs"] }
nix = { version = "0.31", features = ["signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "sync"] }
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

# System tray
ksni = { version = "0.3.3", features = ["blocking"] }
crossbeam-channel = "0.5"

# Screen recording
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
gstreamer-allocators = "0.25"
gbm = "0.18"
drm-fourcc = "2"

# i18n
i18n-embed = { version = "0.16", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"

[dependencies.cosmic]
package = "libcosmic"
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["dbus-config", "multi-window", "tokio", "wayland", "wgpu", "winit"]

[package.metadata.deb]
maintainer = "Hojjat Abdollahi"
copyright = "2024, Hojjat Abdollahi"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/snappea",
    "usr/bin/",
    "755",
  ],
  [
    "data/io.github.hojjatabdollahi.snappea.desktop",
    "usr/share/applications/",
    "644",
  ],
  [
    "data/logo.svg",
    "usr/share/icons/hicolor/scalable/apps/io.github.hojjatabdollahi.snappea.svg",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/ocr-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/qr-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/arrow-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/circle-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/square-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/redact-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/pixelate-symbolic.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
  [
    "data/icons/hicolor/scalable/actions/drag.svg",
    "usr/share/icons/hicolor/scalable/actions/",
    "644",
  ],
]

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-config-derive = { path = "../libcosmic/cosmic-config-derive" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
